# Pinzo

./: CMakeLists.txt  absolutehistogram.cpp  absolutehistogram.h  absolutehistogram.ui  cumulativehistogram.cpp  cumulativehistogram.h  cumulativehistogram.ui  differencemap.cpp  differencemap.h  differencemap.ui  gammacorrection.cpp  gammacorrection.h  gammacorrection.ui  histogram.cpp  histogram.h  histogram.ui  histogramspecification.cpp  histogramspecification.h  histogramspecification.ui  imageadjuster.cpp  imageadjuster.h  imageadjuster.ui  imagedifference.cpp  imagedifference.h  imagedifference.ui  imageviewer.cpp  imageviewer.h  imageviewer.ui  lineartransformation.cpp  lineartransformation.h  lineartransformation.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rotation.cpp  rotation.h  rotation.ui  saveimagedialog.cpp  saveimagedialog.h  (+4 more)
include/: geometricfunctions.h  image.h  lineartransformation.h  rubberband.h  util.h
src/: geometricfunctions.cpp  image.cpp  isGrayscale.py  lineartransformation.cpp  rubberband.cpp  util.cpp
